# Docraft

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  project.json  vcpkg.json
doc/: .gitignore  (+4 more)
docraft/: CMakeLists.txt  fonts.json
docraft/compiler/: grammar.y  parser.l
docraft/include/: docraft_color.h  docraft_cursor.h  docraft_document.h  docraft_document_context.h  docraft_document_metadata.h  docraft_lib.h  docraft_pdf_context.h
docraft/include/backend/: docraft_image_rendering_backend.h  docraft_line_rendering_backend.h  docraft_page_rendering_backend.h  docraft_pdf_backend.h  docraft_rendering_backend.h  docraft_shape_rendering_backend.h  docraft_text_rendering_backend.h
docraft/include/backend/pdf/: docraft_haru_backend.h
docraft/include/craft/: docraft_craft_language_parser.h  docraft_craft_language_tokens.h  i_docraft_parser.h
docraft/include/craft/parser/: docraft_circle_parser.h  docraft_line_parser.h  docraft_parser.h  docraft_parser_helpers.h  docraft_polygon_parser.h  docraft_shape_parser_utils.h  docraft_triangle_parser.h
docraft/include/docraft/: docraft_color.h  docraft_cursor.h  docraft_document.h  docraft_document.hpp  docraft_document_context.h  docraft_document_metadata.h  docraft_lib.h
docraft/include/docraft/backend/: docraft_image_rendering_backend.h  docraft_line_rendering_backend.h  docraft_page_rendering_backend.h  docraft_pdf_backend.h  docraft_rendering_backend.h  docraft_shape_rendering_backend.h  docraft_text_rendering_backend.h
docraft/include/docraft/craft/: docraft_craft_language_parser.h  docraft_craft_language_tokens.h  i_docraft_parser.h
docraft/include/docraft/generic/: chain_of_responsibility_handler.h  docraft_font_applier.h
docraft/include/docraft/layout/: docraft_layout_engine.h
docraft/include/docraft/model/: docraft_blank_line.h  docraft_body.h  docraft_children_container_node.h  docraft_circle.h  docraft_clone_utils.h  docraft_footer.h  docraft_foreach.h  docraft_header.h  docraft_image.h  docraft_layout.h  docraft_line.h  docraft_list.h  docraft_new_page.h  docraft_node.h  docraft_page_format.h  docraft_page_number.h  docraft_paragraph.h  docraft_polygon.h  docraft_position.h  docraft_rectangle.h  docraft_section.h  docraft_settings.h  docraft_table.h  docraft_text.h  docraft_triangle.h  i_docraft_clonable.h
docraft/include/docraft/renderer/: docraft_pdf_renderer.h  docraft_renderer.h
docraft/include/docraft/templating/: docraft_template_engine.h
docraft/include/docraft/utils/: docraft_base64.h  docraft_font_registry.h  docraft_font_resolver.h  docraft_keyword_extractor.h  docraft_logger.h  docraft_parser_utilis.h
docraft/include/generic/: chain_of_responsibility_handler.h  docraft_font_applier.h
docraft/include/layout/: docraft_layout_engine.h
docraft/include/layout/handler/: abstract_docraft_layout_handler.h  docraft_basic_layout_handler.h  docraft_layout_blank_line.h  (+5 more)
docraft/include/model/: docraft_blank_line.h  docraft_body.h  docraft_children_container_node.h  docraft_circle.h  docraft_clone_utils.h  docraft_footer.h  docraft_foreach.h  docraft_header.h  docraft_image.h  docraft_layout.h  docraft_line.h  docraft_list.h  docraft_new_page.h  docraft_node.h  docraft_page_format.h  docraft_page_number.h  docraft_paragraph.h  docraft_polygon.h  docraft_position.h  docraft_rectangle.h  docraft_section.h  docraft_settings.h  docraft_table.h  docraft_text.h  docraft_triangle.h  i_docraft_clonable.h
docraft/include/renderer/: docraft_pdf_renderer.h  docraft_renderer.h
docraft/include/templating/: docraft_template_engine.h
docraft/include/utils/: docraft_base64.h  docraft_font_registry.h  docraft_font_resolver.h  docraft_keyword_extractor.h  docraft_logger.h  docraft_parser_utilis.h
docraft/src/: docraft_color.cc  docraft_cursor.cc  docraft_document.cc  docraft_document_context.cc  docraft_pdf_context.cc  main.cpp
docraft/src/craft/: docraft_craft_language_parser.cc
docraft/src/docraft/: docraft_color.cc  docraft_cursor.cc  docraft_document.cc  docraft_document_context.cc  main.cpp
docraft/src/generic/: docraft_font_applier.cc
docraft/src/layout/: docraft_layout_engine.cc
docraft/src/model/: docraft_blank_line.cc  docraft_body.cc  docraft_children_container_node.cc  docraft_circle.cc  docraft_clone_utils.cc  docraft_footer.cc  docraft_foreach.cc  docraft_header.cc  docraft_image.cc  docraft_layout.cc  docraft_line.cc  docraft_list.cc  docraft_new_page.cc  docraft_node.cc  docraft_page_number.cc  docraft_paragraph.cc  docraft_polygon.cc  docraft_position.cc  docraft_rectangle.cc  docraft_section.cc  docraft_settings.cc  docraft_table.cc  docraft_text.cc  docraft_triangle.cc
docraft/src/renderer/: docraft_pdf_renderer.cc
docraft/src/templating/: docraft_template_engine.cc
docraft/src/utils/: docraft_base64.cc  docraft_font_registry.cc  docraft_font_resolver.cc  docraft_keyword_extractor.cc  docraft_logger.cc  docraft_parser_utilis.cc
docraft/test/: CMakeLists.txt  docraft_color_test.cc  docraft_document_test.cc  test.cpp
docraft/test/backend/: docraft_haru_backend_test.cc
docraft/test/craft/: docraft_craft_language_parser_test.cc  docraft_image_parser_test.cc  docraft_settings_parser_test.cc  docraft_shape_parser_test.cc  docraft_table_parser_test.cc
docraft/test/docraft/: docraft_color_test.cc  docraft_document_test.cc
docraft/test/generic/: docraft_font_applier_test.cc
docraft/test/layout/: DocraftCursorTest.cc  docraft_cursor_test.cc  docraft_layout_engine_test.cc  docraft_layout_text_handler_test.cc  docraft_pagination_test.cc
docraft/test/model/: docraft_clone_test.cc  docraft_list_test.cc  docraft_node_test.cc  docraft_position_test.cc  docraft_settings_test.cc  docraft_z_index_test.cc
docraft/test/renderer/: docraft_image_painter_test.cc  docraft_painter_smoke_test.cc  docraft_section_margin_test.cc
docraft/test/templating/: docraft_template_engine_test.cc
docraft/test/utils/: docraft_keyword_extractor_test.cc  docraft_logger_test.cc  docraft_mock_rendering_backend.h  docraft_parser_utils.cc
(+232 files in other folders)
